Modifico codigo y estilos, 2 botones funcionando

--- a/index.html
+++ b/index.html
@@ -1,46 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Gameboy</title>
+    <title>Replica consola</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="css/estilos.css">
-
+    <link href="css/estilos.css" rel="stylesheet">
 </head>
-
 <body>
 
-    <div id="container">
+   
 
+    <div class="container-fluid" id="contenedor">
+        
         <div id="ladoIzquierdo">
-            <div id="botonIzquierdo">
-                <h3>El boton iz está aqui</h3>
-            </div>
+            <div id="botonIzquierdo"></div>
         </div>
-        <div class="pantallaNegra" id="pantalla"></div>
+        <div class="pantallaCentral" id="screen"></div>
+
         <div id="ladoDerecho">
             <div id="botonDerecho"></div>
-            <h3>El boton dcho está aqui</h3>
+            <div id="botonApagado"></div>
         </div>
 
-
+        
     </div>
 
-
-
     <script src="js/main.js"></script>
-    <script src="js/functions.js"></script>
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
 </body>
-
 </html>
