--- a/index.html
+++ b/index.html
@@ -13,11 +13,22 @@
     <div class="container-fluid" id="contenedor">
         
         <div id="ladoIzquierdo">
+
             <div id="botonIzquierdo"></div>
+            <div class="botonesPequeños botonArriba"></div>
+            <div class="botonesPequeños botonMedioIzquierda"></div>
+            <div class="botonesPequeños botonMedioDerecha"></div>  
+            <div class="botonesPequeños botonAbajo"></div> 
+            
         </div>
+
         <div class="pantallaCentral" id="screen"></div>
 
         <div id="ladoDerecho">
+            <div class="botonesPequeños botonArriba";>X</div>
+            <div class="botonesPequeños botonMedioIzquierda">Y</div>
+            <div class="botonesPequeños botonMedioDerecha">A</div>  
+            <div class="botonesPequeños botonAbajo">B</div>
             <div id="botonDerecho"></div>
             <div id="botonApagado"></div>
         </div>
