Cambio div por button y pongo letras en los botones superiores

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <div id="ladoIzquierdo">
 
-            <div id="botonIzquierdo"></div>
+            <button id="botonIzquierdo"></button>
             <div class="botonesPequeños botonArriba"></div>
             <div class="botonesPequeños botonMedioIzquierda"></div>
             <div class="botonesPequeños botonMedioDerecha"></div>  
@@ -25,12 +25,12 @@
         <div class="pantallaCentral" id="screen"></div>
 
         <div id="ladoDerecho">
-            <div class="botonesPequeños botonArriba";>X</div>
-            <div class="botonesPequeños botonMedioIzquierda">Y</div>
-            <div class="botonesPequeños botonMedioDerecha">A</div>  
-            <div class="botonesPequeños botonAbajo">B</div>
-            <div id="botonDerecho"></div>
-            <div id="botonApagado"></div>
+            <button class="botonesPequeños botonArriba";>X</button>
+            <button class="botonesPequeños botonMedioIzquierda">Y</button>
+            <button class="botonesPequeños botonMedioDerecha">A</button>  
+            <button class="botonesPequeños botonAbajo">B</button>
+            <button id="botonDerecho"></button>
+            <button id="botonApagado"></button>
         </div>
 
         
